feat(agent): capture filters and sampling for scope-open
Add five new -javaagent arguments that gate scope capture at open time:
include.name, exclude.name, include.package, exclude.package, and
sample.rate (0.0-1.0). Filtered or sampled-out scopes produce zero JFR
events for their entire lifetime because ScopeOpenAdvice simply refuses
to register them in AgentState.SCOPE_STATES — the existing null-state
short-circuits in ForkAdvice, ScopeCloseAdvice, and TracingCallable
handle the rest. Exclude rules win over include; sampling is evaluated
last so filtered traffic does not consume the sample budget. Glob
dialect supports *, **, ? and is not path-segment aware. Unblocks
production deployments at scale where unconditional tracing would
exhaust JFR per-thread buffers.

https://claude.ai/code/session_01FdT6kuGR7gAJBHLfyvN4gr